add_subdirectory_if(Digitization ACTS_BUILD_PLUGIN_DIGITIZATION AND ACTS_BUILD_PLUGIN_IDENTIFICATION)
add_subdirectory_if(HepMC ACTS_BUILD_EXAMPLES_HEPMC3)
add_subdirectory(Fatras)
add_subdirectory_if(Geant4HepMC ACTS_BUILD_EXAMPLES_GEANT4 AND ACTS_BUILD_EXAMPLES_HEPMC3)
add_subdirectory_if(Geant4 ACTS_BUILD_EXAMPLES_GEANT4)
add_subdirectory_if(Geant4DD4hep ACTS_BUILD_EXAMPLES_DD4HEP AND ACTS_BUILD_EXAMPLES_GEANT4)
add_subdirectory(Generators)
add_subdirectory_if(GeneratorsPythia8 ACTS_BUILD_EXAMPLES_PYTHIA8)
add_subdirectory(MaterialMapping)
add_subdirectory(Printers)
add_subdirectory(Propagation)
add_subdirectory(TrackFinding)
add_subdirectory(TrackFitting)
add_subdirectory(TruthTracking)
add_subdirectory(Vertexing)
