add_subdirectory(Digitization)
add_subdirectory(Fatras)
add_subdirectory_if(Geant4 ACTS_BUILD_EXAMPLES_GEANT4)
add_subdirectory(Generators)
add_subdirectory_if(GeneratorsPythia8 ACTS_BUILD_EXAMPLES_PYTHIA8)
add_subdirectory(Geometry)
add_subdirectory(MaterialMapping)
add_subdirectory(Printers)
add_subdirectory(Propagation)
add_subdirectory_if(Traccc ACTS_BUILD_PLUGIN_TRACCC)
add_subdirectory(TrackFinding)
add_subdirectory_if(TrackFindingExaTrkX ACTS_BUILD_EXAMPLES_EXATRKX)
add_subdirectory_if(TrackFindingML ACTS_BUILD_PLUGIN_ONNX)
add_subdirectory(TrackFitting)
add_subdirectory(TruthTracking)
add_subdirectory(Vertexing)
add_subdirectory_if(Alignment ACTS_BUILD_ALIGNMENT)
add_subdirectory(Utilities)
add_subdirectory(AmbiguityResolution)
