add_component(Common ExamplesDetectorsCommon)
add_component_if(DD4hepDetector ExamplesDetectorDD4hep ACTS_BUILD_EXAMPLES_DD4HEP)
add_subdirectory(GenericDetector)
add_subdirectory_if(Geant4Detector ACTS_BUILD_EXAMPLES_GEANT4)
add_subdirectory(MagneticField)
add_subdirectory_if(TGeoDetector ACTS_BUILD_EXAMPLES_ROOT)
add_subdirectory(ITkModuleSplitting)
add_subdirectory(TelescopeDetector)
add_subdirectory(MuonSpectrometerMockupDetector)
add_subdirectory_if(GeoModelDetector ACTS_BUILD_PLUGIN_GEOMODEL)

propagate_components_to_parent()
