add_subdirectory(Csv)
add_subdirectory_if(EDM4hep ACTS_BUILD_EXAMPLES_EDM4HEP)
add_subdirectory(HepMC3)
add_subdirectory(Json)
add_subdirectory(Obj)
add_subdirectory_if(Root ACTS_BUILD_EXAMPLES_ROOT)
add_subdirectory_if(Svg ACTS_BUILD_PLUGIN_ACTSVG)
add_subdirectory_if(Podio ACTS_BUILD_EXAMPLES_PODIO)
