add_subdirectory(Csv)
add_component_if(Podio ExamplesIoPodio ACTS_BUILD_EXAMPLES_PODIO)
add_component_if(EDM4hep ExamplesIoEDM4hep ACTS_BUILD_EXAMPLES_EDM4HEP)
add_subdirectory(HepMC3)
add_subdirectory(Json)
add_subdirectory(Obj)
add_subdirectory_if(Root ACTS_BUILD_EXAMPLES_ROOT)
add_subdirectory_if(Svg ACTS_BUILD_PLUGIN_ACTSVG)

propagate_components_to_parent()
